<resources>
    <string name="app_name">ISC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blog_fragment">Hello blog fragment</string>
    <string name="hello_activity_fragment">Hello activity fragment</string>
    <string name="hello_home_fragment">Hello homefragment</string>
    <string name="title_activity_main_nd">MainNDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="myact">我的活动</string>
    <string name="mycomment">我的评论</string>
    <string name="myfavorite">我的收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string name="realname">真实姓名</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="dep">所属学院</string>
    <string name="clas">班级</string>
    <string name="num">学号</string>
    <string name="phone">手机号</string>
    <string name="qq">QQ号</string>

    <string name="host">发布者: </string>
    <string name="datetime">时间: </string>
    <string name="place">地点: </string>
    <string name="logout">退出登录</string>
    <string name="submit">提交</string>

    <string name="actmaxnumber">人数上限: </string>
    <string name="currentnumber">当前报名人数: </string>
    <string name="cost">费用: </string>
    <string name="join">参加活动</string>
    <string name="type">类型: </string>
    <string name="auth">作者: </string>
    <string name="end">END </string>
    <string name="comment">写评论 </string>
    <string name="editcomment">请输入评论内容 </string>
    <string name="editposts">发帖 </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="editactivity">发布活动</string>
    <string name="entertainment">娱乐</string>
    <string name="competition">比赛</string>
    <string name="reporting">报告汇演/讲座</string>
    <string name="volunteer">公益活动</string>
    <string name="other">其它</string>
    <string name="sports">运动</string>
    <string name="maxps">若无上限，请填“0”</string>
    <string name="introduction">介绍:</string>
    <string name="title">标题:</string>
    <string name="organizer">主办方</string>
    <string name="select">选择</string>
    <string name="begindatetime">活动开始时间</string>
    <string name="myposts">我的帖子</string>
    <string name="mynews">我的资讯</string>
    <string name="share">分享</string>
    <string name="title_activity_act_initinfo">ActInitinfoActivity</string>
    <string name="roster">活动报名信息</string>
    <string name="generaluser">普通用户</string>
    <string name="abouttext">\t\t\t\tISC校园助手是由在校大学生团队开发设计的一款面向广大在校生的社区交流平台。在这里，你可以掌握最新校园动态，共享校园信息，发布校园线下活动，让校园生活变得更加丰富多彩。\n
        \t\t\t\t如果你对我们所做的事情感兴趣，可以加入我们的QQ群，和我们交流你的想法，也可以加入我们的团队，一起为校园社区建设做出贡献！</string>
    <string name="version">V 0.1</string>
    <string name="qqqun">QQ群号：306301028</string>

</resources>
