<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myact"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/myact" />
        <item
            android:id="@+id/mycomment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/mycomment" />
        <item
            android:id="@+id/myfavorite"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/myfavorite" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
