<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    tools:context="com.team.isc.view.acitvity.EditActActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/back"
                    android:onClick="editActback" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/editactivity"
                    style="@style/TextAppearance.AppCompat"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/editact_atitle"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datetime" />

                <TextView
                    android:id="@+id/editact_adatetime"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:onClick="selectdatetime"
                    android:background="@drawable/edit_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place" />

                <EditText
                    android:id="@+id/editact_aplace"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organizer" />

                <EditText
                    android:id="@+id/editact_ahost"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <com.team.isc.util.MyRadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editact_radiogroup"
                    android:button="@null"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/radioButton1_volunteer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volunteer" />
                        <RadioButton
                            android:id="@+id/radioButton2_competition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/competition" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/radioButton3_reporting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reporting" />
                        <RadioButton
                            android:id="@+id/radioButton4_entertainment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/entertainment" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/radioButton5_sports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sports" />
                        <RadioButton
                            android:id="@+id/radioButton6_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other" />
                    </LinearLayout>
                </com.team.isc.util.MyRadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actmaxnumber" />

                <EditText
                    android:id="@+id/editact_amaxnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/maxps"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/cost" />

                <EditText
                    android:id="@+id/editact_acost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introduction" />

                <EditText
                    android:id="@+id/editact_atext"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="top"
                    android:background="@drawable/edit_background"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/submit"
                android:onClick="addAct"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
