<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="12dp"
    android:paddingRight="16dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/myactinitinfo_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/account"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginLeft="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/myactinitinfo_realname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realname"
                android:textSize="16dp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/myactinitinfo_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/dep"-->
                <!--android:textSize="12sp"/>-->
            <TextView
                android:id="@+id/myactinitinfo_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC学院"
                android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clas"
                style="@style/TextAppearance.AppCompat"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/myactinitinfo_class"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC"
                android:textSize="12dp"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/num"
                android:textSize="12dp"/>
            <TextView
                android:id="@+id/myactinitinfo_num"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
