<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="12dp"
    android:paddingRight="16dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/activity_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/activity1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_marginLeft="12dp">
        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            android:textSize="24dp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/activity_host"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/activity_datetime"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textSize="12dp"/>
            <TextView
                android:id="@+id/activity_place"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISC"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
